[Doc] Add some internal notet on fos config

--- a/src/Resources/config/fos_http_cache.yml
+++ b/src/Resources/config/fos_http_cache.yml
@@ -6,6 +6,7 @@ proxy_client:
 user_context:
     enabled: true
     hash_cache_ttl: 600
+    # NOTE: These are also defined/used in AppCache, in Varnish VCL, and Fastly VCL
     user_hash_header: X-User-Hash
     session_name_prefix: eZSESSID
 
