Prefix user contex hash tag with repository name

--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -22,7 +22,7 @@ services:
 
     ezplatform.user_context_tagger.response_subscriber:
         class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\UserContextSubscriber
-        arguments: ['%ezplatform.http_cache.tags.header%']
+        arguments: ['%ezplatform.http_cache.tags.header%', $repository$]
         tags:
             - { name: kernel.event_subscriber }
 
