Change approach to always have a global ez-all tag and let PurgeAll target that one

--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -22,7 +22,10 @@ services:
 
     ezplatform.user_context_tagger.response_subscriber:
         class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\UserContextSubscriber
-        arguments: ['%ezplatform.http_cache.tags.header%', $repository$]
+        arguments: ['%ezplatform.http_cache.tags.header%']
+        # Use setter to avoid SiteAccess system creating two instances of handler before and after SiteAccess is set
+        calls:
+            - [setRepositoryId, [$repository$]]
         tags:
             - { name: kernel.event_subscriber }
 
