[WIP] Implement cache clearer
Adds support for purging all http cache when developer runs `cache:clear` command

TBD

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -57,3 +57,9 @@ services:
         arguments: ["@ezpublish.api.repository"]
         tags:
             - { name: fos_http_cache.user_context_provider }
+
+    ezplatform.http_cache.http_cache_clearer:
+        class: EzSystems\PlatformHttpCacheBundle\CacheClearer\HttpCacheClearer
+        arguments: ["@ezplatform.http_cache.purge_client"]
+        tags:
+            - { name: kernel.cache_clearer }
