--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "^6.13.4@dev || ^7.2@dev",
+        "ezsystems/ezpublish-kernel": "^6.13.4@dev || ^7.3@dev",
         "friendsofsymfony/http-cache-bundle": "^1.3.13",
-        "symfony/symfony": "^2.7 | ^3.1"
+        "symfony/symfony": "^2.8.40 || ^3.4.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.0",
-        "matthiasnoback/symfony-dependency-injection-test": "~1.0|~2.0",
-        "phpspec/phpspec": "^3.4 || ^4.2",
-        "friendsofphp/php-cs-fixer": "~2.7.1",
-        "memio/spec-gen": "^0.6 | ^0.8"
+        "phpunit/phpunit": "^5.7.27 || ^6.5.13",
+        "matthiasnoback/symfony-dependency-injection-test": "^1.2.0 || ^2.3.1",
+        "phpspec/phpspec": "^3.4.3 || ^4.3.2",
+        "friendsofphp/php-cs-fixer": "~2.7.5",
+        "memio/spec-gen": "^0.6.2 || ^0.8.5"
     },
     "autoload": {
         "psr-4": {
