Attempt to fix behat on v2 as well

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "fix-cs": "@php ./vendor/bin/php-cs-fixer fix -v --show-progress=estimating"
     },
     "extra": {
+        "_ezplatform_branch_for_behat_tests": "master",
         "branch-alias": {
             "dev-master": "0.8.x-dev",
             "dev-tmp_ci_branch": "0.8.x-dev"
