--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "^6.13.4@dev || ^7.3@dev",
-        "friendsofsymfony/http-cache-bundle": "^1.3.13",
-        "symfony/symfony": "^2.8.40 || ^3.4.11"
+        "ezsystems/ezpublish-kernel": "^7.5@dev",
+        "friendsofsymfony/http-cache-bundle": "^2.6",
+        "symfony/symfony": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.27 || ^6.5.13",
