--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,17 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "^7.5@dev",
+        "ezsystems/ezpublish-kernel": "^8.0@dev",
         "friendsofsymfony/http-cache-bundle": "^2.6",
-        "symfony/symfony": "^4.2"
+        "symfony/http-kernel": "^4.2",
+        "symfony/http-foundation": "^4.2",
+        "symfony/routing": "^4.2",
+        "symfony/dependency-injection": "^4.2",
+        "symfony/config": "^4.2",
+        "symfony/yaml": "^4.2",
+        "symfony/event-dispatcher": "^4.2",
+        "symfony/finder": "^4.2",
+        "symfony/filesystem": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.27 || ^6.5.13",
