--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,17 @@
     ],
     "repositories": [
         {
-            "type": "path",
-            "url": "../ezpublish-kernel",
-            "options": {
-                "symlink": true
-            }
+            "type": "vcs",
+            "url": "../ezpublish-kernel"
+        },
+        {
+            "type": "vcs",
+            "url": "../doctrine-dbal-schema"
         }
     ],
     "require": {
         "ezsystems/ezpublish-kernel": "dev-symfony4 as 8.0.0",
-        "friendsofsymfony/http-cache-bundle": "^1.3.16",
+        "friendsofsymfony/http-cache-bundle": "^2.6",
         "symfony/http-kernel": "^4.2",
         "symfony/http-foundation": "^4.2",
         "symfony/routing": "^4.2",
