--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "fix-cs": "@php ./vendor/bin/php-cs-fixer fix -v --show-progress=estimating"
     },
     "extra": {
-        "_ezplatform_branch_for_behat_tests": "master",
+        "_ezplatform_branch_for_behat_tests": "2.5",
         "branch-alias": {
             "dev-master": "0.9.x-dev",
             "dev-tmp_ci_branch": "0.9.x-dev"
