--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
         "fix-cs": "@php ./vendor/bin/php-cs-fixer fix -v --show-progress=estimating"
     },
     "extra": {
-        "_ezplatform_branch_for_behat_tests": "2.5",
+        "_ezplatform_branch_for_behat_tests": "master",
         "branch-alias": {
-            "dev-master": "0.9.x-dev",
-            "dev-tmp_ci_branch": "0.9.x-dev"
+            "dev-master": "0.10.x-dev",
+            "dev-tmp_ci_branch": "0.10.x-dev"
         }
     }
 }
