--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -15,7 +15,7 @@ services:
         arguments: ['@ezplatform.http_cache.purge_client_internal']
         # Use setter to avoid SiteAccess system creating two instances of handler before and after SiteAccess is set
         calls:
-            - [setRepositoryId, [$repository$]]
+            - [setRepositoryId, [$repository$, '%ezpublish.repositories%']]
 
     ezplatform.http_cache.purge_client_internal:
         alias: ezplatform.http_cache.purge_client.local
@@ -50,7 +50,7 @@ services:
          - '@ezplatform.http_cache.purge_client'
         # Use setter to avoid SiteAccess system creating two instances of handler before and after SiteAccess is set
         calls:
-            - [setRepositoryId, [$repository$]]
+            - [setRepositoryId, [$repository$, '%ezpublish.repositories%']]
 
     ezplatform.http_cache.user_context_provider.role_identify:
         class: EzSystems\PlatformHttpCacheBundle\ContextProvider\RoleIdentify
