Change to use service and use config resolver to avoid early read of Sa settings

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -12,10 +12,7 @@ services:
 
     ezplatform.http_cache.purge_client_decorator:
         class: EzSystems\PlatformHttpCacheBundle\PurgeClient\RepositoryPrefixDecorator
-        arguments: ['@ezplatform.http_cache.purge_client_internal']
-        # Use setter to avoid SiteAccess system creating two instances of handler before and after SiteAccess is set
-        calls:
-            - [setRepositoryId, [$repository$, '%ezpublish.repositories%']]
+        arguments: ['@ezplatform.http_cache.purge_client_internal', '@ezplatform.http_cache.repository_tag_prefix']
 
     ezplatform.http_cache.purge_client_internal:
         alias: ezplatform.http_cache.purge_client.local
@@ -48,12 +45,15 @@ services:
          - '@ezplatform.http_cache.cache_manager'
          - '%ezplatform.http_cache.tags.header%'
          - '@ezplatform.http_cache.purge_client'
-        # Use setter to avoid SiteAccess system creating two instances of handler before and after SiteAccess is set
-        calls:
-            - [setRepositoryId, [$repository$, '%ezpublish.repositories%']]
+         - '@ezplatform.http_cache.repository_tag_prefix'
 
     ezplatform.http_cache.user_context_provider.role_identify:
         class: EzSystems\PlatformHttpCacheBundle\ContextProvider\RoleIdentify
         arguments: ["@ezpublish.api.repository"]
         tags:
             - { name: fos_http_cache.user_context_provider }
+
+    ezplatform.http_cache.repository_tag_prefix:
+        class: EzSystems\PlatformHttpCacheBundle\RepositoryTagPrefix
+        # Use config resolver to be able to lazy load reading SA setting "repository" to avoid scope change issues
+        arguments: ["@ezpublish.config.resolver", '%ezpublish.repositories%']
