EZP-30511: HttpCache purging failing if repository has been configured as "default" (#82)
* EZP-30511: HttpCache purging failing if repository has been configured as "default"

* [Tests] Update and add tests

* Change to use service and use config resolver to avoid early read of Sa settings

* Add spec for RepositoryTagPrefix & UserContextSubscriber

--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -22,10 +22,7 @@ services:
 
     ezplatform.user_context_tagger.response_subscriber:
         class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\UserContextSubscriber
-        arguments: ['%ezplatform.http_cache.tags.header%']
-        # Use setter to avoid SiteAccess system creating two instances of handler before and after SiteAccess is set
-        calls:
-            - [setRepositoryId, [$repository$]]
+        arguments: ['@ezplatform.http_cache.repository_tag_prefix', '%ezplatform.http_cache.tags.header%']
         tags:
             - { name: kernel.event_subscriber }
 
