--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
     ],
     "require": {
         "ezsystems/ezpublish-kernel": "^8.0@dev",
-        "ezsystems/doctrine-dbal-schema": "^1.0@dev",
         "ezsystems/ezplatform-rest": "^1.0@dev",
         "friendsofsymfony/http-cache-bundle": "^1.3.13",
         "symfony/symfony": "^2.8.40 || ^3.4.11"
@@ -23,6 +22,8 @@
         "friendsofphp/php-cs-fixer": "~2.7.5",
         "memio/spec-gen": "^0.6.2 || ^0.8.5"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "EzSystems\\PlatformHttpCacheBundle\\": "src",
