--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     "require": {
         "ezsystems/ezpublish-kernel": "^8.0@dev",
         "ezsystems/ezplatform-rest": "^1.0@dev",
-        "friendsofsymfony/http-cache-bundle": "^1.3.13",
-        "symfony/symfony": "^2.8.40 || ^3.4.11"
+        "friendsofsymfony/http-cache-bundle": "^2.6.1",
+        "symfony/symfony": "^2.8.40 || ^3.4.11",
+        "psr/http-client": "^0.1",
+        "php-http/curl-client": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.27 || ^6.5.13",
