--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "friendsofsymfony/http-cache-bundle": "^2.6.1",
         "symfony/symfony": "^2.8.40 || ^3.4.11",
         "psr/http-client": "^0.1",
-        "php-http/curl-client": "^1.7"
+        "php-http/curl-client": "^1.7",
+        "toflar/psr6-symfony-http-cache-store": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.27 || ^6.5.13",
