Change PURGEKEYS to PURGE

--- a/src/Resources/config/fos_http_cache.yml
+++ b/src/Resources/config/fos_http_cache.yml
@@ -3,6 +3,8 @@ proxy_client:
     varnish:
         http:
             servers: ['$http_cache.purge_servers$']
+        tag_mode: 'purgekeys'
+        tags_header: 'key'
 
 user_context:
     enabled: true
