--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "toflar/psr6-symfony-http-cache-store": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.27 || ^6.5.13",
+        "phpunit/phpunit": "~7.5.11",
         "matthiasnoback/symfony-dependency-injection-test": "^1.2.0 || ^2.3.1",
-        "phpspec/phpspec": "^3.4.3 || ^4.3.2",
-        "friendsofphp/php-cs-fixer": "~2.7.5",
-        "memio/spec-gen": "^0.6.2 || ^0.8.5"
+        "phpspec/phpspec": "^5.1",
+        "friendsofphp/php-cs-fixer": "~2.15.0",
+        "memio/spec-gen": "^0.9"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
