--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ cache:
     directories:
         - $HOME/.composer/cache/files
 
-
 env:
   global:
     # For functional tests
@@ -25,7 +24,8 @@ matrix:
         - name: "PHP 7.3 Rest Functional Tests"
           php: 7.3
           env:
-            - TEST_CMD="bin/phpunit --bootstrap vendor/autoload.php -c vendor/ezsystems/ezplatform-rest/phpunit-integration-rest.xml" SYMFONY_CMD="ez:behat:create-language 'pol-PL' 'Polish (polski)'"
+            - TEST_CMD="bin/phpunit --bootstrap vendor/autoload.php -c vendor/ezsystems/ezplatform-rest/phpunit-integration-rest.xml"
+            - SYMFONY_CMD="ez:behat:create-language 'pol-PL' 'Polish (polski)'"
             - PHP_IMAGE=ezsystems/php:7.3-v1
 
 # test only master + stable (+ Pull requests)
