--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ matrix:
         - name: "PHP 7.3 Rest Functional Tests"
           php: 7.3
           env:
-            - TEST_CMD="bin/phpunit --bootstrap vendor/autoload.php -c vendor/ezsystems/ezplatform-rest/phpunit-integration-rest.xml"
+            - REST_TEST_CONFIG="phpunit-integration-rest.xml" TEST_CMD="./bin/.travis/run_rest_tests.sh"
+            - APP_DEBUG=1
             - SYMFONY_CMD="ez:behat:create-language 'pol-PL' 'Polish (polski)'"
             - PHP_IMAGE=ezsystems/php:7.3-v1
 
@@ -44,7 +45,7 @@ before_script:
 
 script:
     - if [ "$TEST_CMD" = "" ] && [ "$CHECK_CS" != "true" ] ; then php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty ; fi
-    - if [ "$TEST_CMD" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "$TEST_CMD" ; fi
+    - if [ "$REST_TEST_CONFIG" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "$TEST_CMD"  ; fi
     - if [ "$CHECK_CS" = "true" ]; then phpenv config-rm xdebug.ini && ./vendor/bin/php-cs-fixer fix -v --dry-run --diff --show-progress=estimating; fi
 
 notifications:
