--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,24 @@
     "require": {
         "ezsystems/ezpublish-kernel": "^8.0@dev",
         "ezsystems/ezplatform-rest": "^1.0@dev",
-        "friendsofsymfony/http-cache-bundle": "^1.3.13",
-        "symfony/symfony": "^2.8.40 || ^3.4.11"
+        "friendsofsymfony/http-cache-bundle": "^2.6.1",
+        "symfony/http-foundation": "^4.3",
+        "symfony/http-kernel": "^4.3",
+        "symfony/dependency-injection": "^4.3",
+        "symfony/event-dispatcher": "^4.3",
+        "symfony/routing": "^4.3",
+        "symfony/yaml": "^4.3",
+        "symfony/config": "^4.3",
+        "psr/http-client": "^1.0",
+        "php-http/curl-client": "^2.0",
+        "toflar/psr6-symfony-http-cache-store": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.27 || ^6.5.13",
+        "phpunit/phpunit": "~7.5.11",
         "matthiasnoback/symfony-dependency-injection-test": "^1.2.0 || ^2.3.1",
-        "phpspec/phpspec": "^3.4.3 || ^4.3.2",
-        "friendsofphp/php-cs-fixer": "~2.7.5",
-        "memio/spec-gen": "^0.6.2 || ^0.8.5"
+        "phpspec/phpspec": "^5.1",
+        "friendsofphp/php-cs-fixer": "~2.15.0",
+        "memio/spec-gen": "^0.9"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -42,8 +51,8 @@
     "extra": {
         "_ezplatform_branch_for_behat_tests": "master",
         "branch-alias": {
-            "dev-master": "0.10.x-dev",
-            "dev-tmp_ci_branch": "0.10.x-dev"
+            "dev-master": "1.0.x-dev",
+            "dev-tmp_ci_branch": "1.0.x-dev"
         }
     }
 }
