--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,15 +1,27 @@
 parameters:
     ezplatform.http_cache.controller.invalidatetoken.class: EzSystems\PlatformHttpCacheBundle\Controller\InvalidateTokenController
     ezplatform.http_cache.listener.vary_header.class: EzSystems\PlatformHttpCacheBundle\EventListener\ConditionallyRemoveVaryHeaderListener
+    ezplatform.http_cache.proxy_client.http_dispatcher.class: FOS\HttpCache\ProxyClient\HttpDispatcher
 
 services:
-    ezplatform.http_cache.cache_manager:
-        parent: fos_http_cache.cache_manager
-        class: FOS\HttpCacheBundle\CacheManager
+    EzSystems\PlatformHttpCacheBundle\ProxyClient\HttpDispatcherFactory:
+        arguments:
+            - '@ezpublish.config.resolver'
+            - '@ezpublish.config.dynamic_setting.parser'
+            - '%ezplatform.http_cache.proxy_client.http_dispatcher.class%'
 
-    ezplatform.http_cache.proxy_client.varnish.factory:
-        class: EzSystems\PlatformHttpCacheBundle\PurgeClient\VarnishProxyClientFactory
-        arguments: ['@ezpublish.config.resolver', '@ezpublish.config.dynamic_setting.parser', '%fos_http_cache.proxy_client.varnish.class%']
+    FOS\HttpCache\ProxyClient\HttpDispatcher:
+        factory: 'EzSystems\PlatformHttpCacheBundle\ProxyClient\HttpDispatcherFactory:buildHttpDispatcher'
+        lazy: true
+        arguments:
+            - '%ezplatform.http_cache.varnish.http.servers%'
+            - '%ezplatform.http_cache.varnish.http.base_url%'
+
+    fos_http_cache.proxy_client.varnish:
+        class: EzSystems\PlatformHttpCacheBundle\ProxyClient\Varnish
+        arguments:
+            - '@FOS\HttpCache\ProxyClient\HttpDispatcher'
+            - '%fos_http_cache.proxy_client.varnish.options%'
 
     ezplatform.http_cache.purge_client:
         alias: ezplatform.http_cache.purge_client_decorator
@@ -24,32 +36,34 @@ services:
     ezplatform.http_cache.purge_client.varnish:
         class: EzSystems\PlatformHttpCacheBundle\PurgeClient\VarnishPurgeClient
         arguments:
-            - '@ezplatform.http_cache.cache_manager'
-            - '@ezpublish.config.resolver'
+            - '@fos_http_cache.cache_manager'
         tags:
             - {name: ezplatform.http_cache.purge_client, purge_type: http}
             - {name: ezplatform.http_cache.purge_client, purge_type: varnish}
 
     ezplatform.http_cache.purge_client.local:
         class: EzSystems\PlatformHttpCacheBundle\PurgeClient\LocalPurgeClient
-        arguments: ['@ezplatform.http_cache.store']
+        arguments: ['@ezplatform.http_cache.tag_aware_store']
         tags:
             - {name: ezplatform.http_cache.purge_client, purge_type: local}
 
-    ezplatform.http_cache.store:
-        alias: ezplatform.http_cache.tag_aware_store
-
     ezplatform.http_cache.tag_aware_store:
-        class: EzSystems\PlatformHttpCacheBundle\Proxy\TagAwareStore
-        arguments: ['%ezplatform.http_cache.store.root%']
+        class: Toflar\Psr6HttpCacheStore\Psr6Store
+        arguments:
+            - cache_directory: '%ezplatform.http_cache.store.root%'
+
+    ezplatform.http_cache.header_formatter.purge_type_based:
+        class: FOS\HttpCache\TagHeaderFormatter\CommaSeparatedTagHeaderFormatter
+        arguments:
+            - '%ezplatform.http_cache.tags.header%'
+            - "@=parameter('ezpublish.http_cache.purge_type') == 'local' ? ',' : ' '"
 
     ezplatform.http_cache.fos_tag_handler.xkey:
         class: EzSystems\PlatformHttpCacheBundle\Handler\TagHandler
         arguments:
-         - '@ezplatform.http_cache.cache_manager'
-         - '%ezplatform.http_cache.tags.header%'
-         - '@ezplatform.http_cache.purge_client'
          - '@ezplatform.http_cache.repository_tag_prefix'
+         - header_formatter: '@ezplatform.http_cache.header_formatter.purge_type_based'
+           strict: '%fos_http_cache.tag_handler.strict%'
 
     ezplatform.http_cache.user_context_provider.role_identify:
         class: EzSystems\PlatformHttpCacheBundle\ContextProvider\RoleIdentify
@@ -62,7 +76,7 @@ services:
         arguments:
          - '@ezpublish.config.resolver'
          - "%ezplatform.http_cache.invalidate_token.ttl%"
-         - "@fos_http_cache.handler.tag_handler"
+         - "@fos_http_cache.http.symfony_response_tagger"
 
     ezplatform.http_cache.listener.vary_header:
         class: "%ezplatform.http_cache.listener.vary_header.class%"
