Added missing slot definition

--- a/src/Resources/config/slot.yml
+++ b/src/Resources/config/slot.yml
@@ -255,3 +255,8 @@ services:
         class: EzSystems\PlatformHttpCacheBundle\SignalSlot\SectionService\UpdateSectionSlot
         parent: ezplatform.http_cache.signalslot.abstract
         tags: [{ name: ezpublish.api.slot, signal: SectionService\UpdateSectionSignal }]
+
+    ezplatform.http_cache.signalslot.assign_section_to_subtree:
+        class: EzSystems\PlatformHttpCacheBundle\SignalSlot\SectionService\AssignSectionToSubtreeSlot
+        parent: ezplatform.http_cache.signalslot.abstract
+        tags: [{ name: ezpublish.api.slot, signal: SectionService\AssignSectionToSubtreeSignal}]
