EZP-31498: Restored varnish auth by token

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -82,6 +82,8 @@ services:
          - '@ezpublish.config.resolver'
          - "%ezplatform.http_cache.invalidate_token.ttl%"
          - "@fos_http_cache.http.symfony_response_tagger"
+        tags:
+            - controller.service_arguments
 
     ezplatform.http_cache.listener.vary_header:
         class: "%ezplatform.http_cache.listener.vary_header.class%"
@@ -94,3 +96,10 @@ services:
         class: EzSystems\PlatformHttpCacheBundle\RepositoryTagPrefix
         # Use config resolver to be able to lazy load reading SA setting "repository" to avoid scope change issues
         arguments: ["@ezpublish.config.resolver", '%ezpublish.repositories%']
+
+    fos_http_cache.proxy_client.varnish:
+        class: EzSystems\PlatformHttpCacheBundle\ProxyClient\Varnish
+        arguments:
+            $configResolver: '@ezpublish.config.resolver'
+            $httpDispatcher: '@fos_http_cache.proxy_client.varnish.http_dispatcher'
+            $options: '%fos_http_cache.proxy_client.varnish.options%'
